--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -217,6 +217,23 @@
   number = {7}
 }
 
+@article{brunduGlobalGuidelinesSustainable2020,
+  title = {Global Guidelines for the Sustainable Use of Non-Native Trees to Prevent Tree Invasions and Mitigate Their Negative Impacts},
+  author = {Brundu, Giuseppe and Pauchard, An{\'i}bal and Py{\v s}ek, Petr and Pergl, Jan and Bindewald, Anja M. and Brunori, Antonio and Canavan, Susan and Campagnaro, Thomas and {Celesti-Grapow}, Laura and {de S{\'a} Dechoum}, Michele and {Dufour-Dror}, Jean-Marc and Essl, Franz and Flory, S. Luke and Genovesi, Piero and Guarino, Francesco and Guangzhe, Liu and Hulme, Philip E. and Jager, Heinke and Kettle, Christopher J. and Krumm, Frank and Langdon, B{\'a}rbara and Lapin, Katharina and Lozano, Vanessa and Le Roux, Johannes J. and Novoa, Ana and Nu{\~n}ez, Martin A. and Port{\'e}, Annabel J. and Silva, Joaquim S. and Schaffner, Urs and Sitzia, Tommaso and Tanner, Rob and Tshidada, Ntakadzeni and V{\'i}tkov{\'a}, Michaela and Westergren, Marjana and Wilson, John R. U. and Richardson, David M.},
+  year = {2020},
+  pages = {65--116},
+  publisher = {{Pensoft Publishers}},
+  issn = {1619-0033},
+  doi = {10.3897/neobiota.65.58380},
+  abstract = {Sustainably managed non-native trees deliver economic and societal benefits with limited risk of spread to adjoining areas. However, some plantations have launched invasions that cause substantial damage to biodiversity and ecosystem services, while others pose substantial threats of causing such impacts. The challenge is to maximise the benefits of non-native trees, while minimising negative impacts and preserving future benefits and options.  A workshop was held in 2019 to develop global guidelines for the sustainable use of non-native trees, using the Council of Europe \textendash{} Bern Convention Code of Conduct on Invasive Alien Trees as a starting point.  The global guidelines consist of eight recommendations: 1) Use native trees, or non-invasive non-native trees, in preference to invasive non-native trees; 2) Be aware of and comply with international, national, and regional regulations concerning non-native trees; 3) Be aware of the risk of invasion and consider global change trends; 4) Design and adopt tailored practices for plantation site selection and silvicultural management; 5) Promote and implement early detection and rapid response programmes; 6) Design and adopt tailored practices for invasive non-native tree control, habitat restoration, and for dealing with highly modified ecosystems; 7) Engage with stakeholders on the risks posed by invasive non-native trees, the impacts caused, and the options for management; and 8) Develop and support global networks, collaborative research, and information sharing on native and non-native trees.  The global guidelines are a first step towards building global consensus on the precautions that should be taken when introducing and planting non-native trees. They are voluntary and are intended to complement statutory requirements under international and national legislation. The application of the global guidelines and the achievement of their goals will help to conserve forest biodiversity, ensure sustainable forestry, and contribute to the achievement of several Sustainable Development Goals of the United Nations linked with forest biodiversity.},
+  annotation = {Accepted: 2020-10-30T15:39:50Z},
+  file = {/home/julien/Documents/ZoteroLibrary/Brundu et al_2020_Global guidelines for the sustainable use of non-native trees to prevent tree.pdf},
+  journal = {Neobiota},
+  keywords = {To read},
+  language = {en},
+  number = {61}
+}
+
 @inproceedings{brunduPlantedForestsInvasive2016,
   title = {Planted Forests and Invasive Alien Trees in {{Europe}}: {{A Code}} for Managing Existing and Future Plantings to Mitigate the Risk of Negative Impacts from Invasions},
   booktitle = {{{NeoBiota}}},
