--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -212,9 +212,6 @@ Nevertheless, establishment likelihood in many other ecosystem types could be di
 For example, it is not clear whether the establishment likelihood of lodgepole pine was higher in the "coastal heath" or "bare rock" types, but it was clearly much higher in both of these than in "forest".
 The pattern of establishment likelihood among ecosystem types was modestly similar between species, with positive rank correlations in four of six species pairs (tab. \@ref(tab:correlation-table)).
 
-For Sitka/Lutz spruce and lodgepole pine, establishment likelihood varied strongly between sites, such that it swamped much of the variation between ecosystem types. 
-For example, the model predicts Sitka/Lutz spruce to colonize "arable fields" at the site with the highest overall establishment likelihood and "boreal heath" at the site with the lowest overall establishment likelihood at roughly equal rates, even though "boreal heath" is colonized more than 100 times faster on average.
-
 ```{r establishment, fig.cap="Establishment likelihoods among ecosystem types, using 'forest' as the reference level, for four alien conifer species groups. Unfilled points show scaled wildling densities calculated directly from the data. In the case of zero wildlings, these points are placed at the lower limit of the x-axis. Filled points with line intervals show modeled estimates surrounded by their 95 % confidence intervals. Grey point clouds show modeled estimates for individual sites in our data set. Ecosystem types are ordered by a confidence-weighted mean of their percentile-ranked establishment likelihoods within species, such that types with consistently high establishment likelihood across species are at the top of the y-axis. Ecosystem types shown in italic font are wetlands, and ecosystem types shown in bold font are structured by disturbance. Ecosystem types without wildlings and covering less than 0.5 ha across all sites for that species are not displayed. Photos licensed CC BY 4.0 Rune Halvorsen."}
 knitr::include_graphics(here('ms', 'figures', 'establishment', 'establishment.svg'))
 ```
@@ -229,16 +226,8 @@ knitr::kable(cortab,
   kable_styling(full_width = F)
 ```
 
-Naturally, variation in establishment likelihoods shrank when ecosystem types were aggregated (by category or structuring process; fig. \@ref(fig:establishment-hypotheses)).
-No more than two orders of magnitude separated the different groups.
-Sitka/Lutz spruce and Norway spruce established at higher rates in wetland ecosystem types than terrestial ecosystem types, while the opposite was true for larch and lodgepole pine.
-Sitka/Lutz spruce and Norway spruce did not colonize disturbance-structured ecosystem types at a higher rate than ecosystem types without disturbance structuring.
-For larch and lodgepole pine, structuring by natural distubance and anthropogenic disturbance, respectively, were associated with the highest rates of colonization. 
-Yet despite larger sample sizes, the mean establishment likelihood in a given group was rarely clearly distinguishable from that in other groups.
-
-```{r establishment-hypotheses, fig.cap="Establishment likelihoods among categories of ecosystem types (top) or structuring processes in ecosystem types (bottom), for four alien conifer species groups. Unfilled points show scaled wildling densities calculated directly from the data. Filled points with line intervals show modeled estimates surrounded by their 95 % confidence intervals. The scale of the x-axis differs by species group and the horizontal dotted line marks the reference level for the comparison."}
-knitr::include_graphics(here('ms', 'figures', 'establishment-hypotheses.svg'))
-```
+For Sitka/Lutz spruce and lodgepole pine, establishment likelihood varied strongly between sites, such that it swamped much of the variation between ecosystem types. 
+For example, the model predicts Sitka/Lutz spruce to colonize "arable fields" at the site with the highest overall establishment likelihood and "boreal heath" at the site with the lowest overall establishment likelihood at roughly equal rates, even though "boreal heath" is colonized more than 100 times faster on average.
 
 For all species, the WALD model of seed dispersal produced estimates of relative seed rain that fit patterns of wildling establishment better than estimates derived from the empirical seed dispersal kernel.
 There was a high degree of confidence that the effect of relative seed rain was positive for all species.
@@ -249,6 +238,17 @@ The interaction specified between relative seed rain and plantation age was esti
 The direct effect of climate on establishment --- not including its effect mediated by ecosystem types --- was negligible for Sitka/Lutz spruce and Norway spruce, with model estimates near zero (Appendix [A5]). 
 For larch there was a negative direct effect of precipitation (Bio19), with a 50 mm increase in coldest-quarter precipitation estimated to decrease establishment six-fold.
 Likewise for lodgepole pine, the model estimated a 175 mm increase in coldest-quarter precipitation to decrease establishment by a factor of 50.
+
+Variation in establishment likelihoods shrank when ecosystem types were aggregated (by category or structuring process; fig. \@ref(fig:establishment-hypotheses)).
+No more than two orders of magnitude separated the different groups.
+Sitka/Lutz spruce and Norway spruce established at higher rates in wetland ecosystem types than terrestial ecosystem types, while the opposite was true for larch and lodgepole pine.
+Sitka/Lutz spruce and Norway spruce did not generally colonize disturbance-structured ecosystem types at higher rates than ecosystem types without disturbance structuring.
+For larch and lodgepole pine, structuring by natural distubance and anthropogenic disturbance, respectively, were associated with the highest rates of colonization. 
+Yet despite larger sample sizes, the mean establishment likelihood in any particular group was rarely clearly distinguishable from that in other groups.
+
+```{r establishment-hypotheses, fig.cap="Establishment likelihoods among categories of ecosystem types (top) or structuring processes in ecosystem types (bottom), for four alien conifer species groups. Unfilled points show scaled wildling densities calculated directly from the data. Filled points with line intervals show modeled estimates surrounded by their 95 % confidence intervals. The scale of the x-axis differs by species group and the horizontal dotted line marks the reference level for the comparison."}
+knitr::include_graphics(here('ms', 'figures', 'establishment-hypotheses.svg'))
+```
 
 # Discussion
 
